Fix alignment issue in ClaimCollateralHistoryRow and ClaimFundingFeesHistoryRow

--- a/src/components/Synthetics/Claims/ClaimHistoryRow/ClaimHistoryRow.scss
+++ b/src/components/Synthetics/Claims/ClaimHistoryRow/ClaimHistoryRow.scss
@@ -17,6 +17,10 @@
   font-size: var(--font-sm);
 }
 
+.ClaimHistoryRow-price {
+  text-align: end !important;
+}
+
 .ClaimHistoryRow-action-handle {
   display: block;
   min-width: 0px;
