--- a/src/components/Synthetics/TableOptionsFilter/TableOptionsFilter.scss
+++ b/src/components/Synthetics/TableOptionsFilter/TableOptionsFilter.scss
@@ -39,6 +39,7 @@
   &-clear {
     font-size: var(--font-sm);
     padding: 0.5rem 1rem;
+    padding-top: 1rem;
 
     color: var(--text-gray);
 
@@ -46,6 +47,10 @@
 
     &:hover {
       color: white;
+    }
+
+    &:last-child {
+      padding-bottom: 1rem;
     }
   }
 }
